syntax = "proto3";

package grpc;

option go_package = "host-api-service/pkg/api";

service Traveler {
    rpc Node(NodeRequest) returns (NodeResponse);
    rpc Delete(DockerRequest) returns(DockerResponse);
    rpc NodeGPUInfo(NodeGPURequest) returns(NodeGPUResponse);
}

message NodeRequest {
    string clusterName = 1;
}

message NodeResponse {
    string ClusterName = 1;
    string NodeName = 2;
    int32 GPU = 3;
}

message DockerRequest {
    string dockerid = 1;
}

message DockerResponse {
}

message NodeGPURequest {}

message NodeGPUResponse {
    int32 GPU = 1;
    bool IsGPU = 2;
}